# fe-algorithm

./: README.md
Python/py-07-packaging/: README.md  pyproject.toml
Python/py-07-packaging/docs/: 01-pyproject-toml.md  02-venv.md  03-package-formats.md  04-dependency-tools.md  05-lockfile.md  06-entry-points.md  07-private-index.md  08-multi-env.md  09-exercises.md  10-interview-questions.md
Python/py-07-packaging/scripts/: build.sh  setup.sh  test.sh
Python/py-07-packaging/tests/: test_cli.py  test_core.py
Python/py-08-quality/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
Python/py-08-quality/docs/: 01-ruff.md  02-formatter.md  03-type-checking.md  04-pre-commit.md  05-task-runners.md  06-exercises.md  07-interview-questions.md
Python/py-08-quality/scripts/: check.sh  demo_bad.sh  setup.sh
Python/py-09-testing/: README.md  pyproject.toml
Python/py-09-testing/docs/: 01-pytest-basics.md  02-fixtures.md  03-mock.md  04-coverage.md  05-integration.md  06-organization.md  07-exercises.md  08-interview-questions.md
Python/py-09-testing/scripts/: coverage.sh  setup.sh  test.sh
Python/py-09-testing/tests/: conftest.py  test_file_utils.py  test_http_utils.py  test_math_utils.py
Python/py-11-project-cli/: .pre-commit-config.yaml  README.md  pyproject.toml
Python/py-11-project-cli/scripts/: lint.sh  run_demo.sh  test.sh
Python/py-11-project-cli/tests/: conftest.py  test_cli.py  test_config.py  test_counter.py  test_output.py  test_scanner.py
Python/py-12-data-processing/: README.md  pyproject.toml
Python/py-12-data-processing/data/: dirty.csv  schema.json
Python/py-12-data-processing/docs/: 01-json.md  02-yaml-toml.md  03-csv.md  04-pydantic.md  05-validation.md  06-cleaning.md  07-transformation.md  08-exercises.md  09-interview.md  10-pandas-basics.md  11-pandas-analysis.md
Python/py-12-data-processing/scripts/: run_demo.sh  test.sh
Python/py-12-data-processing/tests/: conftest.py  test_cleaners.py  test_models.py  test_parsers.py  test_reporters.py  test_validators.py
Python/py-13-automation/: README.md  pyproject.toml
Python/py-13-automation/docs/: 01-batch-patterns.md  02-resumable.md  03-dry-run.md  04-failure-handling.md  05-common-tasks.md  06-exercises.md  07-interview.md
Python/py-13-automation/examples/: sample_usage.py
Python/py-13-automation/scripts/: coverage.sh  run_demo.sh  test.sh
Python/py-13-automation/tests/: __init__.py  conftest.py  test_executor.py  test_operations.py  test_planner.py  test_state.py
Python/py-14-scaffold/: .pre-commit-config.yaml  README.md  env.example  pyproject.toml
Python/py-14-scaffold/docs/: 01-project-structure.md  02-toolchain.md  03-patterns.md
Python/py-14-scaffold/examples/: sample_usage.py
Python/py-14-scaffold/scripts/: all.sh  create-project.sh  format.sh  lint.sh  run.sh  test.sh  typecheck.sh
Python/py-14-scaffold/tests/: conftest.py  test_cli.py  test_config.py  test_log.py  test_utils.py
Python/py-15-project-automation/: README.md  pyproject.toml
Python/py-15-project-automation/scripts/: run_demo.sh  test.sh
Python/py-15-project-automation/tests/: conftest.py  test_analyzers.py  test_cleaners.py  test_parsers.py  test_reporters.py
Python/py-17-asyncio/: README.md  pyproject.toml
Python/py-17-asyncio/docs/: 01-asyncio-basics.md  02-concurrency.md  03-timeout-cancel.md  04-sync-primitives.md  05-error-handling.md  06-patterns.md  07-exercises.md  08-interview.md
Python/py-17-asyncio/examples/: demo_basics.py  demo_patterns.py  demo_producer_consumer.py
Python/py-17-asyncio/scripts/: run_examples.sh
Python/py-17-asyncio/tests/: conftest.py  test_basics.py  test_concurrency.py  test_patterns.py  test_timeout_cancel.py
Python/py-18-scraping/: README.md  pyproject.toml
Python/py-18-scraping/docs/: 01-basics.md  02-compliance.md  03-engineering.md  04-testing.md  05-advanced.md  06-exercises.md  07-interview.md  08-playwright.md
Python/py-18-scraping/examples/: simple_crawler.py
Python/py-18-scraping/scripts/: run_crawler.sh
Python/py-18-scraping/tests/: conftest.py  test_dedup.py  test_fetcher.py  test_parser.py
Python/py-19-project-scraping/: README.md  config.toml  pyproject.toml
Python/py-19-project-scraping/scripts/: run_demo.sh
Python/py-19-project-scraping/tests/: conftest.py  test_models.py  test_pipeline.py  test_sources.py  test_storage.py
Python/py-20-fastapi/: README.md  pyproject.toml
Python/py-20-fastapi/docs/: 01-basics.md  02-pydantic.md  03-dependencies.md  04-middleware.md  05-errors.md  06-auth.md  07-testing.md  08-exercises.md  09-interview.md  10-websocket-basics.md  11-fastapi-websocket.md  12-connection-manager.md  13-heartbeat-reconnection.md  14-scaling.md  15-websocket-exercises.md
Python/py-20-fastapi/scripts/: lint.sh  run_dev.sh  test.sh
Python/py-20-fastapi/tests/: conftest.py  test_auth.py  test_items.py  test_users.py
Python/py-21-storage/: README.md  alembic.ini  pyproject.toml
Python/py-21-storage/docs/: 01-sqlalchemy.md  02-relationships.md  03-alembic.md  04-repository.md  05-redis.md  06-queue.md  07-exercises.md  08-interview.md  09-async-sqlalchemy.md  10-db-advanced.md  11-celery.md
Python/py-21-storage/scripts/: run_demo.sh  test.sh
Python/py-21-storage/tests/: __init__.py  conftest.py  test_cache.py  test_models.py  test_queue.py  test_repositories.py
Python/py-23-project-api/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Python/py-23-project-api/alembic/: env.py
Python/py-23-project-api/scripts/: run_dev.sh  run_prod.sh  test.sh
Python/py-23-project-api/tests/: conftest.py  test_auth.py  test_bookmarks.py  test_users.py
Python/py-24-llm-client/: README.md  pyproject.toml
Python/py-24-llm-client/docs/: 01-llm-client.md  02-structured-output.md  03-streaming.md  04-rag-basics.md  05-rag-advanced.md  06-prompts.md  07-exercises.md  08-interview.md
Python/py-24-llm-client/examples/: rag_demo.py  (+1 more)
Python/py-25-ai-security/: README.md  pyproject.toml
Python/py-26-project-final/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
(+1225 files in other folders)
