[project]
name = "packaging-lab"
version = "0.1.0"
description = "Python 包管理学习示例项目"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
keywords = ["packaging", "learning", "example"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 核心依赖
dependencies = [
    "click>=8.0",
]

# 可选依赖（分组）
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs>=1.5",
]

# CLI 入口
[project.scripts]
pkglab = "packaging_lab.cli:main"

# 项目 URL
[project.urls]
Homepage = "https://github.com/example/packaging-lab"
Documentation = "https://packaging-lab.readthedocs.io"
Repository = "https://github.com/example/packaging-lab"

# 构建系统
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch 配置
[tool.hatch.build.targets.wheel]
packages = ["src/packaging_lab"]

# pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ruff 配置
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

# mypy 配置
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

# coverage 配置
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

