[project]
name = "testing-lab"
version = "0.1.0"
description = "Python 测试体系演示"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "pytest-mock>=3.0",
    "coverage>=7.0",
    "respx>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testing_lab"]

# ============================================================
# pytest 配置
# ============================================================
[tool.pytest.ini_options]
# 测试路径
testpaths = ["tests"]

# 命令行参数
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# 标记定义
markers = [
    "slow: 标记为慢速测试",
    "integration: 集成测试",
    "unit: 单元测试",
]

# 异步模式
asyncio_mode = "auto"

# Python 路径
pythonpath = ["src"]

# ============================================================
# coverage 配置
# ============================================================
[tool.coverage.run]
# 源代码目录
source = ["src"]

# 分支覆盖
branch = true

# 忽略
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
# 排除行
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# 最小覆盖率
fail_under = 80

# 显示缺失行
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

