# ============================================================================
# Python 项目工程化脚手架 - pyproject.toml 完整配置示例
# ============================================================================
# 这是一个可复用的项目模板，包含了现代 Python 项目的最佳实践配置
# ============================================================================

# ----------------------------------------------------------------------------
# 构建系统配置 (PEP 517/518)
# ----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ----------------------------------------------------------------------------
# 项目元数据 (PEP 621)
# ----------------------------------------------------------------------------
[project]
name = "scaffold"
version = "0.1.0"
description = "Python 项目工程化脚手架模板"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["scaffold", "template", "python", "project"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

# 运行时依赖
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

# 可选依赖组
[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pre-commit>=3.5.0",
]

# 文档依赖（可选）
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

# CLI 入口点
[project.scripts]
scaffold = "scaffold.cli:main"

# 项目 URL
[project.urls]
Homepage = "https://github.com/yourusername/scaffold"
Repository = "https://github.com/yourusername/scaffold"
Documentation = "https://github.com/yourusername/scaffold#readme"

# ----------------------------------------------------------------------------
# Hatch 构建配置
# ----------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/scaffold"]

[tool.hatch.build.targets.sdist]
include = ["src/scaffold"]

# ----------------------------------------------------------------------------
# Ruff 配置 - Linting + Formatting
# ----------------------------------------------------------------------------
[tool.ruff]
# 源代码目录
src = ["src"]
# 行长度限制
line-length = 88
# 目标 Python 版本
target-version = "py311"
# 排除目录
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# 忽略的规则
ignore = [
    "E501",     # line too long (由 formatter 处理)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
]

# 每个文件可忽略的规则
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # unused function argument (fixtures)
    "S101",    # assert usage
]

# isort 配置
[tool.ruff.lint.isort]
known-first-party = ["scaffold"]
force-single-line = false
lines-after-imports = 2

# 格式化配置
[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进使用空格
indent-style = "space"
# 行尾使用 auto
line-ending = "auto"

# ----------------------------------------------------------------------------
# Pyright 配置 - 类型检查
# ----------------------------------------------------------------------------
[tool.pyright]
# 包含的目录
include = ["src"]
# 排除的目录
exclude = ["**/__pycache__", ".venv"]
# Python 版本
pythonVersion = "3.11"
# 类型检查模式: off, basic, standard, strict, all
typeCheckingMode = "basic"
# 报告缺失的类型存根
reportMissingTypeStubs = false
# 报告未知的成员访问
reportUnknownMemberType = false

# ----------------------------------------------------------------------------
# Pytest 配置 - 测试
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
# 测试路径
testpaths = ["tests"]
# 测试文件命名模式
python_files = "test_*.py"
# 测试函数命名模式
python_functions = "test_*"
# 默认参数
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
# 自定义 markers
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
# 过滤警告
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ----------------------------------------------------------------------------
# Coverage 配置 - 测试覆盖率
# ----------------------------------------------------------------------------
[tool.coverage.run]
# 测量的源代码
source = ["src/scaffold"]
# 分支覆盖
branch = true
# 并行模式
parallel = true

[tool.coverage.report]
# 最小覆盖率要求
fail_under = 80
# 排除的行
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
# 显示缺失的行
show_missing = true

[tool.coverage.html]
# HTML 报告目录
directory = "htmlcov"

