[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log-analyzer"
version = "0.1.0"
description = "日志分析与清理工具 - 综合项目 2"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Python Learner" }]
keywords = ["log", "analyzer", "automation", "cleanup"]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
log-analyzer = "log_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/log_analyzer"]

[tool.hatch.build.targets.sdist]
include = ["src/log_analyzer"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["log_analyzer"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/log_analyzer"]
branch = true

