[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-aggregator"
version = "0.1.0"
description = "技术博客聚合器 - 综合项目"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Python Learner" }]
keywords = ["scraping", "blog", "aggregator", "asyncio"]

dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
blog-aggregator = "blog_aggregator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_aggregator"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["blog_aggregator"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/blog_aggregator"]
branch = true

