# ============================================
# P26 终极项目 - AI 知识库助手
# ============================================

[project]
name = "knowledge-assistant"
version = "1.0.0"
description = "企业知识库问答助手 - 综合运用 RAG、FastAPI、安全防护与评测"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"},
]

keywords = [
    "RAG",
    "LLM",
    "knowledge-base",
    "fastapi",
    "AI",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # HTTP 客户端
    "httpx>=0.26.0",
    
    # 数据验证
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # 向量计算
    "numpy>=1.26.0",
    
    # 文档处理
    "pypdf>=4.0.0",
    
    # 日志
    "structlog>=24.1.0",
    
    # SSE
    "sse-starlette>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

embeddings = [
    "sentence-transformers>=2.3.0",
    "tiktoken>=0.5.0",
]

chromadb = [
    "chromadb>=0.4.0",
]

[project.scripts]
ka-server = "knowledge_assistant.main:run"
ka-eval = "knowledge_assistant.evaluation.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=knowledge_assistant",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true


